# day

./: Cargo.toml  justfile
i18n/en/: day.ftl
res/: io.github.hojjatabdollahi.day.desktop  io.github.hojjatabdollahi.day.metainfo.xml
src/: cities.rs  config.rs  lib.rs  localize.rs  main.rs  time.rs  window.rs
