[package]
name = "cosmic-applet-time"
version = "1.0.2"
edition = "2024"
license = "GPL-3.0-only"

[profile.release]
lto = "thin"
opt-level = 3

[dependencies]
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
serde = { version = "1.0", features = ["derive"] }
jiff = "0.2"
i18n-embed-fl = "0.10"
i18n-embed = { version = "0.16.0", features = ["fluent-system", "desktop-requester"] }
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
    "applet",
    "applet-token",
    "dbus-config",
    "multi-window",
    "tokio",
    "wayland",
    "desktop-systemd-scope",
    "winit",
] }
rust-embed = "8.11.0"
tokio = { version = "1", features = ["full"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
icu = { version = "2.1.1", features = ["compiled_data"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
timedate-zbus = { git = "https://github.com/pop-os/dbus-settings-bindings" }
logind-zbus = "5.3.2"
serde_json = "1"
